# 0.01.27 (33396) Jul 16, 2009
7/16/09 update dots when concentration is changed while K=strong
# 0.01.26 (33285) Jul 13, 2009
7/13/09 turn off -dev flag for interviews
7/13/09 turn off -dev flag for interviews
> same as 0.1.25, but with no -dev arg in JNLP files, for interviews
# 0.01.25 (33259) Jul 13, 2009
7/13/09 change requests
> change BH+ color to mustard (RGB=192,178,60)
# 0.01.24 (33083) Jul 6, 2009
7/6/09 change requests
> match concentration if log10 differs by 0.12
> match strength if log10 differs by 0.35
> match strength if both solutions are strong, don't compare strength values
> make dot views static while strength slider is dragged in the strong region
# 0.01.23 (33058) Jul 6, 2009
7/6/09 change requests
> change "chemical ion ratio" to "solute ratio"
> change "HA/A ratio" to "HA/A solute ratio"
# 0.01.22 (33014) Jul 3, 2009
7/3/09 misc cleanup and fixes
> clean up and document state machine for Matching Game
> fix: set color of "ratio" in "H3O/OH ratio" ratio check box to black when enabled
# 0.01.21 (32982) Jul 2, 2009
7/2/09 change requests
> randomly select the view for the "acid or base" question in Matching Game
> hide HA and A from molecule counts and graphs for "acid or base" question
> hide concentration value for "no solute"
# 0.01.20 (32851) Jun 29, 2009
6/29/09 demonstrate Matching Game
> first complete implementation of Matching Game
# 0.01.19 (32680) Jun 23, 2009
6/23/09 publish requested changes for review
> align baselines in equations
# 0.01.18 (32665) Jun 23, 2009
6/23/09 publish requested changes for review
> custom renderer for solute combo box
> separators in solute combo box
# 0.01.17 (32638) Jun 22, 2009
6/22/09 publish requested changes for review
> improve quality of icons by scaling their image files, instead of doing scaling in Piccolo
# 0.01.16 (32625) Jun 22, 2009
6/22/09 publish requested changes for review
> new icons for MOH and A-
> exponents for all molecule counts are now the same size