@@ -14,6 +14,7 @@ import java.util.Iterator;
 import javax.swing.event.ChangeEvent;
 import javax.swing.event.ChangeListener;
 
+import edu.colorado.phet.acidbasesolutions.ABSColors;
 import edu.colorado.phet.acidbasesolutions.ABSConstants;
 import edu.colorado.phet.acidbasesolutions.ABSStrings;
 import edu.colorado.phet.acidbasesolutions.model.AqueousSolution;
@@ -47,7 +48,7 @@ public class SolutionControlsNode extends PhetPNode {
     private static final Color LABEL_COLOR = Color.BLACK;
     private static final double BACKGROUND_MARGIN = 10;
     private static final double BACKGROUND_CORNER_RADIUS = 25;
-    private static final Color BACKGROUND_COLOR = new Color( 255, 255, 220 );
+    private static final Color BACKGROUND_COLOR = ABSColors.COLOR_PANEL_BACKGROUND;
     private static final Color BACKGROUND_STROKE_COLOR = Color.BLACK;
     private static final Stroke BACKGROUND_STROKE = new BasicStroke( 1f );
     private static final Color SEPARATOR_COLOR = BACKGROUND_COLOR.darker();
